feat: Add Vectalab CLI and core functionality for image vectorization
- Implemented a command-line interface in `cli.py` for Vectalab, allowing users to specify input images, output SVGs, and various parameters for vectorization.
- Created the `Vectalab` class in `core.py` to handle the main vectorization pipeline, including image loading, segmentation, tracing, and SVG output.
- Introduced high-fidelity vectorization methods in `hifi.py`, combining traditional vectorization with edge-correction techniques to achieve high SSIM.
- Added SVG writing capabilities in `output.py` for saving vectorized paths and bezier curves.
- Developed segmentation functionality using SAM in `segmentation.py` to generate masks from input images.
- Implemented tracing of masks to vector paths in `tracing.py` using the Potrace library.
- Removed the old `vmagic` module as it is no longer needed.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [project]
-name = "vmagic"
+name = "vectalab"
 version = "0.1.0"
-description = "High-fidelity image vectorization library"
+description = "Vectalab - Professional High-Fidelity Image Vectorization"
 readme = "README.md"
 license = {text = "MIT"}
 authors = [
-    {name = "VMagic Contributors"}
+    {name = "Vectalab Contributors"}
 ]
 requires-python = ">=3.10"
 classifiers = [
@@ -45,12 +45,12 @@ dev = [
 ]
 
 [project.scripts]
-vmagic = "vmagic.cli:main"
+vectalab = "vectalab.cli:main"
 
 [project.urls]
-Homepage = "https://github.com/vmagic/vmagic"
-Documentation = "https://github.com/vmagic/vmagic#readme"
-Repository = "https://github.com/vmagic/vmagic"
+Homepage = "https://vectalab.com"
+Documentation = "https://github.com/vectalab/vectalab#readme"
+Repository = "https://github.com/vectalab/vectalab"
 
 [build-system]
 requires = ["setuptools>=61.0", "wheel"]
@@ -58,7 +58,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["vmagic*"]
+include = ["vectalab*"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
