--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,8 @@ dependencies = [
     "scipy>=1.11.0",
     "vtracer>=0.6.0",
     "cairosvg>=2.7.0",
+    "typer[all]>=0.9.0",
+    "rich>=13.0.0",
 ]
 
 [project.optional-dependencies]
@@ -45,7 +47,7 @@ dev = [
 ]
 
 [project.scripts]
-vectalab = "vectalab.cli:main"
+vectalab = "vectalab.cli:run"
 
 [project.urls]
 Homepage = "https://vectalab.com"
