--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,9 @@ scikit-image>=0.19.0
 vtracer>=0.6.0
 cairosvg>=2.5.0
 
+# SVG optimization
+scour>=0.38.0
+
 # Optional: Advanced segmentation
 torch>=1.9.0
 torchvision>=0.10.0
@@ -16,6 +19,10 @@ segment-anything>=1.0
 # Optional: Alternative vectorization
 svgwrite>=1.4.0
 potracer>=0.0.4
+
+# CLI
+typer>=0.9.0
+rich>=13.0.0
 
 # Development
 pytest>=7.0.0
