--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
     "terminal.integrated.macOptionClickForcesSelection": true,
     "terminal.integrated.defaultProfile.osx": "zsh",
-    "terminal.integrated.accessibleViewFocusOnCommandExecution": true,
+    "terminal.integrated.accessibleViewFocusOnCommandExecution": false,
     "debug.terminal.clearBeforeReusing": true,
-    "terminal.integrated.accessibleViewPreserveCursorPosition": true,
+    "terminal.integrated.accessibleViewPreserveCursorPosition": false,
     "terminal.integrated.allowMnemonics": true,
     "terminal.integrated.enableImages": true,
     "terminal.integrated.enableVisualBell": true,
@@ -14,5 +14,36 @@
     "terminal.integrated.smoothScrolling": true,
     "terminal.integrated.stickyScroll.enabled": true,
     "terminal.integrated.scrollback": 10000,
-    "terminal.integrated.cursorBlinking": true
+    "terminal.integrated.cursorBlinking": true,
+    "accessibility.verbosity.terminal": false,
+    "terminal.integrated.profiles.osx": {
+        
+        "bash": {
+            "path": "bash",
+            "args": [
+                "-l"
+            ],
+            "icon": "terminal-bash"
+        },
+        "zsh": {
+            "path": "zsh",
+            "args": [
+                "-l"
+            ]
+        },
+        "fish": {
+            "path": "fish",
+            "args": [
+                "-l"
+            ]
+        },
+        "tmux": {
+            "path": "tmux",
+            "icon": "terminal-tmux"
+        },
+        "pwsh": {
+            "path": "pwsh",
+            "icon": "terminal-powershell"
+        }
+    }
 }
